[B]3.3.5[/B] (28.09.2015)
- removed sound resources
- fixed missing fonts
- new design for DialogSeekbar and DialogFullscreenInfo
- support for NextUp Service

[B]3.3.4[/B] (18.09.2015)
- TexturePacker problem fixed

[B]3.3.3[/B] (07.09.2015)
- few positioning fixes
- subtitles always downloadable
- pvr view alignment fixes

[B]3.3.2[/B] (10.08.2015)
- Submenu customization with skin shortcuts
- HomeMenu Skin Settings refactored
- lot of refactor
- some bug fixes

[B]3.3.0[/B] (09.07.2015)
- initial Isengard version

[B]3.2.0[/B] (09.07.2015)
- recently added fixed for horizontal view

[B]3.2.0[/B] (02.07.2015)
- recently added widget redesigned
- Kodi Helix skin adjustments
- different fixes and adjustments

[B]3.1.2[/B] (31.10.2014)
- weather cleanup and change to support new addons
- changed script.extendedinfo to script.skin.info.service
- lyrics addon settings changed
- positioning and visibility changes

[B]3.1.1[/B] (28.07.2014)
- minor bug fixes

[B]3.1.0[/B] (24.04.2014)
- initial changes for Gotham
- xbmc subtitle service support
- library editor support
- colordiffuse instead of new media flags
- minor cleanup and optimization

[B]3.0.47[/B] (26.11.2013)
- TvTunes updated to version 4.0.1
- TvTunes solo mode added to DialogVideoInfo
- Swedish language updated
- N.O.W.A.L.L. genre option removed
- movie/music extras (fanart/poster/etc. removed) - can still be downloaded - ask in forum or email me
- temporarily removed skin themes
- few bugfixes and tweaks

[B]3.0.46[/B] (20.08.2013)
- Fanart View for Movie Sets
- few bug-/layout-fixes
- Startup animation configurable
- deprecated settings removed
- Random Fanart Backdrops on Home re-added
- extrafanart support switched to script.extendedinfo (optional, "old" local file still supported)

[B]3.0.45[/B] (05.04.2013)
- Bugfix for loading smartplylists at startup
- Optimized png textures to save some megabytes 