@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.cirrus.extended" name="Cirrus Extended" version="3.3.5" provider-name="butchabay,paradix,YoHan">
+<addon id="skin.cirrus.extended" name="Cirrus Extended" version="3.4.0" provider-name="butchabay,paradix,YoHan">
     <requires>
         <import addon="xbmc.gui" version="5.10.0" />
-        <import addon="service.skin.widgets" version="0.0.29" />
-        <import addon="service.library.data.provider" version="0.0.7" />
-        <import addon="script.artistslideshow" version="1.6.9" />
-        <import addon="script.artwork.downloader" version="12.0.29" />
-        <import addon="script.tv.show.next.aired" version="6.0.12" />
+        <import addon="service.skin.widgets" version="0.0.31" />
+        <import addon="service.library.data.provider" version="0.1.3" />
+        <import addon="script.artistslideshow" version="1.8.5" />
+        <import addon="script.artwork.downloader" version="13.1.0" />
         <import addon="script.simpleplaylists" version="1.1.1" />
-        <import addon="script.favourites" version="5.0.2" />
-        <import addon="script.image.resource.select" version="0.0.5"/>
-        <import addon="resource.images.studios.white" version="0.0.5"/>
+        <import addon="script.favourites" version="6.0.0" />
+        <import addon="script.image.resource.select" version="0.0.9"/>
     </requires>
     <extension point="xbmc.gui.skin" defaultresolution="720p" defaultresolutionwide="720p" defaultthemename="textures.xbt" effectslowdown="0.75" debugging="false">
         <res width="1280" height="720" aspect="16:9" default="true" folder="720p" />
@@ -21,7 +19,7 @@
         <disclaimer lang="en">use the skin at your own risk :)</disclaimer>
         <platform>all</platform>
         <license>GNU GENERAL PUBLIC LICENSE. Version 3, June 2007</license>
-        <source>https://github.com/paradix/skin.cirrus.extended.v3</source>
+        <source>https://github.com/paradix/skin.cirrus.extended</source>
         <forum>http://forum.kodi.tv/showthread.php?tid=153704</forum>
         <email>paradix@outlook.com</email>
     </extension>
